--- a/meeting-minutes/2024/2024-04-03-TAC.md
+++ b/meeting-minutes/2024/2024-04-03-TAC.md
@@ -5,25 +5,64 @@ parent: Meeting Minutes
 grand_parent: PQCA TAC
 nav_exclude: true
 ---
-
-# Announcements
-* <mark>_Put any announcements. Upcoming events, for example_
-</mark>
-
-# Presentation
-<mark>_If there are any presentations from a WG, SIG, or project._
-</mark>
-
-# Decision
-<mark>_If there are any items up for vote (this is not meant to be exclusive but meant to highlight items that are expected to be voted on)_</mark>
+# Agenda
+1. Antitrust note [Max]
+2. Any intro to new faces [all]
+3. State of the board and elections [Max]
+4. Logistics etc
+   a. Agenda and minutes (Google Doc?)
+   b. Discussions platforms (Discord, Github, etc)
+   c. Co-chair
+   d. Next meeting
+5. Hackathon results [Nigel]
+6. Working Groups [Max]
+   a. Algorithms
+   b. Education / Website
+   c. OQS
+7. Tooling
+8. Security governance
+9. Project lifecycle
+10. Project assurance level
 
 # Discussion
-<mark>_Items for discussion, including items left over from the previous meetings, as well as items that have been added_
-</mark>
 
-# Project Proposals 
-<mark>_include any project proposals that have been submitted and need discussion or decision._
-</mark>
+* Need to select a vice-chair
+  a. Agreed to move to mailing list and elections
+  b. Max nominated Brian Jarvis (AWS)
+  c. Others can self-nominate or nominate others
+  d. Ry will set voting to decide vice-chair before next meeting
+* Logistics
+  a. Use GH (like Hyperledger) for agenda and minutes
+     i. Ry proposed process and created entry for first meeting
+  b. Mailing list for announce of agenda and minutes 
+  c. Use GH discussions for project and discord for 
+* Hackathon results
+  a. Nigel updates [link to PDF presentation]
+  b. Schedule next hackathon
+  c. Challenge is to address Asian, European, American
+  d. Perhaps two separate meetings
+* Working groups
+  a. OQS already started and doing well
+  b. For PQ code package the following projects
+    i. Algos
+    ii. Tooling and misc
+    iii. Education / Website / Docs
+  c. Security governance (as proposed by Emily)
+* Project lifecycle [Hart]
+  a. Hart shared template lifecycle that takes from Hyperledger and other projects [link to doc]
+  b. This group should make suggestions and changes as appropriate 
+* Project assurance [Norman]
+  a. Include in project lifecycle
+  b. What assurances we want to propose is included into our lifecycle and that projects will follow
+  c. APIs discussions
+
+# Action Items
+
+* [x] Email mailing list to elect vice-chair [Max]
+* [x] Document the minutes into GH repo and get approval and share in mailing list [Max]
+* [ ] Schedule next hackathon meeting [Nigel]
+* [ ] Propose the 3 new working groups:  Algos, Tooling / Misc, and Docs / Education / Website as sissues [Max]
+* [ ] Review lifecycle document and include assurance into template doc [All]
 
 # Recordings
 
@@ -41,3 +80,7 @@ nav_exclude: true
 * [ ] ~~Sophie Schmieg, Google~~
 * [x] Brian Jarvis, Amazon Web Services Inc.
 * [x] Thomas Bailleux, SandboxAQ
+* [x] Douglas Stebila, U. Waterloo
+* [x] Thomas Ashley, Cisco
+* [x] Ry Jones, LF
+* [x] Hart Montgomery, LF
