--- a/meeting-minutes/2024/2024-04-03-TAC.md
+++ b/meeting-minutes/2024/2024-04-03-TAC.md
@@ -81,6 +81,6 @@ nav_exclude: true
 * [x] Brian Jarvis, Amazon Web Services Inc.
 * [x] Thomas Bailleux, SandboxAQ
 * [x] Douglas Stebila, U. Waterloo
-* [x] Thomas Ashley, Cisco
+* [x] Norman Ashley, Cisco
 * [x] Ry Jones, LF
 * [x] Hart Montgomery, LF
