Remove non-voting members
Fold in Nigel's changes

Co-authored-by: Nigel Jones <nigel.l.jones+git@gmail.com>
Signed-off-by: Ry Jones <ry@linux.com>

--- a/meeting-minutes/2024/2024-04-03-TAC.md
+++ b/meeting-minutes/2024/2024-04-03-TAC.md
@@ -37,7 +37,7 @@ nav_exclude: true
   b. Mailing list for announce of agenda and minutes 
   c. Use GH discussions for project and discord for 
 * Hackathon results
-  a. Nigel updates [link to PDF presentation]
+  a. Nigel updates [link to PDF presentation](https://hackathon.pqcodepackage.org/202404/summary.html)
   b. Schedule next hackathon
   c. Challenge is to address Asian, European, American
   d. Perhaps two separate meetings
@@ -49,7 +49,7 @@ nav_exclude: true
     iii. Education / Website / Docs
   c. Security governance (as proposed by Emily)
 * Project lifecycle [Hart]
-  a. Hart shared template lifecycle that takes from Hyperledger and other projects [link to doc]
+  a. Hart shared template lifecycle that takes from Hyperledger and other projects  [link to doc](https://docs.google.com/document/d/1NV-0vNgXWdc81oqT0jv0C-9Funb8dySS06u90ghF-X4/edit?usp=sharing)
   b. This group should make suggestions and changes as appropriate 
 * Project assurance [Norman]
   a. Include in project lifecycle
@@ -61,7 +61,7 @@ nav_exclude: true
 * [x] Email mailing list to elect vice-chair [Max]
 * [x] Document the minutes into GH repo and get approval and share in mailing list [Max]
 * [ ] Schedule next hackathon meeting [Nigel]
-* [ ] Propose the 3 new working groups:  Algos, Tooling / Misc, and Docs / Education / Website as sissues [Max]
+* [ ] Propose the 3 new working groups:  Algos, Tooling / Misc, and Docs / Education / Website as issues [Max]
 * [ ] Review lifecycle document and include assurance into template doc [All]
 
 # Recordings
@@ -81,6 +81,3 @@ nav_exclude: true
 * [x] Brian Jarvis, Amazon Web Services Inc.
 * [x] Thomas Bailleux, SandboxAQ
 * [x] Douglas Stebila, U. Waterloo
-* [x] Norman Ashley, Cisco
-* [x] Ry Jones, LF
-* [x] Hart Montgomery, LF
