Attendees for meeting
Signed-off-by: Ry Jones <ry@linux.com>

--- a/meeting-minutes/2024/2024-04-10-TAC.md
+++ b/meeting-minutes/2024/2024-04-10-TAC.md
@@ -41,9 +41,9 @@ nav_exclude: true
 
 # Attended by
 
-* [ ] Norman Ashley, Cisco
-* [ ] Michael (Max)imilien, IBM
-* [ ] Sam Stanwyck, NVIDIA
-* [ ] Sophie Schmieg, Google
-* [ ] Brian Jarvis, Amazon Web Services Inc.
-* [ ] Thomas Bailleux, SandboxAQ
+* [ ] ~~Norman Ashley, Cisco~~
+* [x] Michael (Max)imilien, IBM
+* [ ] ~~Sam Stanwyck, NVIDIA~~
+* [ ] ~~Sophie Schmieg, Google~~
+* [ ] ~~Brian Jarvis, Amazon Web Services Inc.~~
+* [x] Thomas Bailleux, SandboxAQ
