--- a/meeting-minutes/2024/2024-04-10-TAC.md
+++ b/meeting-minutes/2024/2024-04-10-TAC.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: YYYY-MM-DD TAC Meeting Record
+title: 2024-04-10 TAC Meeting Record
 parent: Meeting Minutes
 grand_parent: PQCA TAC
 nav_exclude: true
