DRAFT minutes for 2024-04-10
Added DRAFT minutes for review and approvals

Signed-off-by: dr.max <maxim@us.ibm.com>

--- a/meeting-minutes/2024/2024-04-10-TAC.md
+++ b/meeting-minutes/2024/2024-04-10-TAC.md
@@ -9,27 +9,82 @@ nav_exclude: true
 </mark>
 
 # Agenda
-* <mark>_Put any announcements. Upcoming events, for example_
-</mark>
+
+1. New faces
+2. Approve agenda (with any changes) [Max]
+3. Approval of minutes of last meeting [All]
+4. Project lifecycle document [All]
+5. Working groups [All]
+6. Vision for TAC <= Delayed to next meeting
+7. PQ Code Package [Nigel]
+8. Action items [All]
 
 # Announcements
-* <mark>_Put any announcements. Upcoming events, for example_
-</mark>
+
+None
 
 # Presentation
-<mark>_If there are any presentations from a WG, SIG, or project._
-</mark>
+
+None
 
 # Decision
-<mark>_If there are any items up for vote (this is not meant to be exclusive but meant to highlight items that are expected to be voted on)_</mark>
+
+None since not enough voting members
 
 # Discussion
-<mark>_Items for discussion, including items left over from the previous meetings, as well as items that have been added_
-</mark>
 
+* New faces [Max]
+* Approve agenda (with any changes) [Max]
+* Approval of minutes of last meeting [All]
+    * 03/07 minutes are available at: https://github.com/PQCA/TAC/pull/5 
+    * Please review minutes and vote for approval via approval of the pull request, or make a comment / code review to suggest a change
+* Project lifecycle document [All]
+    * https://docs.google.com/document/d/1NV-0vNgXWdc81oqT0jv0C-9Funb8dySS06u90ghF-X4/edit
+    * Start merging changes and reply to comments
+    * Can revise the document over time
+    * Flexibility 
+* Working groups [Max]
+1. https://github.com/PQCA/TAC/issues/8
+    1. Website managed by Naomi
+    2. Different parts come from github.io for the various projects 
+    3. Work with Naomi to ensure that PQCA.org sections that require changes sync with correct parts of the projects github.io
+2. https://github.com/PQCA/TAC/issues/7
+    1. It’s the essence of this project
+    2. Goal is to currate which OSS PQ algo implementation to reach out to
+3. https://github.com/PQCA/TAC/issues/2
+    1. Open SSF guideline
+    2. Scorecard (started, Nigel)
+        1. At least start with basic
+        2. Automated as much as possible 
+        3. Moved to best practices eventually
+        4. CVE vulnerability reporting
+    3. Sigstore
+    4. CBOM (a bit meta since the items in this project are used by CBOM)
+    5. Get someone from OpenSSF (reach out to Omkar and cc: Hart)
+* Vision for TAC <= Delayed to next meeting
+* PQ Code Package [Nigel]
+    * Different algorithms already
+    * Creation of TSC
+    * Need list members
+    * Project charter (template from Hart)
+    * Documentation and website pages
+    * Hackathon after charter
+      
 # Action items
-* <mark>_Put any announcements. Upcoming events, for example_
-</mark>
+
+## Done (from previous minutes)
+
+* [x] Propose the 3 new working groups: Algos, Tooling / Misc, and Docs / Education / Website as issues [Max]
+    
+## Old
+* [x] Schedule next hackathon meeting [Nigel]
+* [x] Review lifecycle document and include assurance into template doc [All]
+
+## New
+
+* [ ] Reach out to OQS about lifecycle document [Thomas / Nigel]
+* [ ] Setup TSC for PQ Code Package [Nigel]
+* [ ] Reach out to OpenSSF (Omkar) for a security governance overview / best practices [Max]
 
 # Recordings
 
@@ -41,6 +96,16 @@ nav_exclude: true
 
 # Attended by
 
+## Non-voting members
+
+* Bryan (Keyfactor)
+* Norm ()
+* Ry (LF)
+* Hart (LF)
+* Naomi (LF)
+* Nigel (IBM)
+
+## Voting members
 * [ ] ~~Norman Ashley, Cisco~~
 * [x] Michael (Max)imilien, IBM
 * [ ] ~~Sam Stanwyck, NVIDIA~~
