--- a/meeting-minutes/2024/2024-04-10-TAC.md
+++ b/meeting-minutes/2024/2024-04-10-TAC.md
@@ -106,7 +106,7 @@ None since not enough voting members
 * Nigel (IBM)
 
 ## Voting members
-* [ ] ~~Norman Ashley, Cisco~~
+* [x] ~~Norman Ashley, Cisco~~
 * [x] Michael (Max)imilien, IBM
 * [ ] ~~Sam Stanwyck, NVIDIA~~
 * [ ] ~~Sophie Schmieg, Google~~
