--- a/meeting-minutes/2024/2024-04-24-TAC.md
+++ b/meeting-minutes/2024/2024-04-24-TAC.md
@@ -48,7 +48,7 @@ https://github.com/PQCA/TAC/blob/gh-pages/meeting-minutes/2024/2024-04-10-TAC.md
 4. PQCA Scholarship
 
 * Mentorship program that can be mirrored from CNCF or other open source projects.
-* The governing board needs to approve the program then the TAC will ultimately decide what the program parameters
+* The governing board needs to approve the program then the TAC will ultimately decide what the program parameters are.
 * https://lfx.linuxfoundation.org/tools/mentorship/
 
 5. New business
@@ -119,11 +119,11 @@ Action items
 
 Norman, Sam, Sophie, and Brian attended
 
-* [x] ~~Norman Ashley, Cisco~~
+* [x] Norman Ashley, Cisco
 * [x] Michael (Max)imilien, IBM
-* [x] ~~Sam Stanwyck, NVIDIA~~
-* [x] ~~Sophie Schmieg, Google~~
-* [x] ~~Brian Jarvis, Amazon Web Services Inc.~~
+* [x] Sam Stanwyck, NVIDIA
+* [x] Sophie Schmieg, Google
+* [x] Brian Jarvis, Amazon Web Services Inc.
 * [ ] Thomas Bailleux, SandboxAQ
 
 ## Additional attendees
