--- a/meeting-minutes/2024/2024-05-08-TAC.md
+++ b/meeting-minutes/2024/2024-05-08-TAC.md
@@ -121,7 +121,7 @@ Action items
 
 Norman, Sam, Sophie, and Brian attended
 
-* [ ] Norman Ashley, Cisco
+* [x] Norman Ashley, Cisco
 * [x] Michael (Max)imilien, IBM
 * [ ] Sam Stanwyck, NVIDIA
 * [ ] Sophie Schmieg, Google
